# ml-engineer-greenscreens

./: .gitignore  README.md  pyproject.toml
notebooks/: 0_eda.ipynb  1_data_processing.ipynb  2_baseline.ipynb  3_model.ipynb  eda.ipynb
