[tool.poetry]
name = "ml-engineer-greenscreens"
version = "0.1.0"
description = ""
authors = ["Konstantin Burkin <kburkin@samokat.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
polars = "^1.23.0"
numpy = "1.26.4"
joblib = "^1.4.2"
matplotlib = "^3.10.0"
catboost = "^1.2.7"
pyarrow = "^19.0.1"
shap = "^0.46.0"
holidays = "^0.67"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
